force-app/main/default/objects/Contact/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <formula>CASE(TEXT(Emergency_Contact__c),

    &quot;Client&quot;, &quot;Self&quot;, 

    &quot;Conservator&quot;, Conservator_Name__c, 

    &quot;Family Contact&quot;, Family_Contact_Name__c, 

    &quot;Paid Support Contact&quot;, Paid_Support_Name__c, 

    &quot;Rep Payee&quot;, Rep_Payee_Name__c, 

    &quot;Service Coordinator&quot;, Service_Coordinator_Name__c,

    &quot;Other&quot;, Other_Name__c,

    &quot;&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emergency Contact Name</label>
    <type>Text</type>
</CustomField>