force-app/main/default/objects/Contact/fields/Essential_Fields_Incomplete_HC__c.field-meta.xml
<CustomField>
    <fullName>Essential_Fields_Incomplete_HC__c</fullName>
    <formula>OR( 
  LEN( Essential_Fields_Missing_Basic__c ) &gt; 1,
  LEN( Essential_Fields_Missing_HC__c ) &gt; 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Essential Fields Incomplete HC</label>
    <type>Checkbox</type>
</CustomField>