force-app/main/default/objects/Contact/fields/Essential_Fields_Incomplete_Running_User__c.field-meta.xml
<CustomField>
    <fullName>Essential_Fields_Incomplete_Running_User__c</fullName>
    <formula>LEN( Essential_Fields_Missing_Basic__c ) +

IF( 
  $User.User_Profile_Name__c = &quot;RC&quot; ||  CONTAINS($UserRole.Name, &quot;RC&quot;) ,

  LEN(Essential_Fields_Missing_RC__c),
  LEN(Essential_Fields_Missing_HC__c)
) 

&gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Essential Fields Incomplete Running User</label>
    <type>Checkbox</type>
</CustomField>