force-app/main/default/objects/Contact/fields/Essential_Fields_Missing_RC__c.field-meta.xml
<CustomField>
    <fullName>Essential_Fields_Missing_RC__c</fullName>
    <formula>IF(
  AND(
    Active_RC_Service_Case__c || Active_FS_Service_Case__c,
    ISBLANK(TEXT(Partner_Property__c)) 
  ), 
  &quot;Partner Property;&quot;, &quot;&quot;
) &amp;

IF(
  AND(
    Active_RC_Service_Case__c || Active_FS_Service_Case__c, 
    OR(
      ISBLANK(Current_Unit__c),
      Partner_Property_Error__c 
    )
  ), &quot;Partner Property Unit;&quot;, &quot;&quot;) &amp;

IF(
  AND(
    Active_RC_Service_Case__c || Active_FS_Service_Case__c, 
    ISBLANK(Move_in_Date__c) 
  ), 
  &quot;Move-in Date;&quot;, &quot;&quot;
) &amp;


IF(
  AND(
    Active_RC_Service_Case__c || Active_FS_Service_Case__c, 
    ISBLANK(Annual_Regional_Center_Check_in_Date__c) 
  ), 
  &quot;Annual Regional Center Check-in Date;&quot;, &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Essential Fields Missing RC</label>
    <type>Text</type>
</CustomField>