force-app/main/default/objects/Contact/fields/Family_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Family_Contact_Email__c</fullName>
    <label>Family Contact Email</label>
    <type>Email</type>
</CustomField>