force-app/main/default/objects/Contact/fields/Family_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Contact_Name__c</fullName>
    <label>Family Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>