force-app/main/default/objects/Contact/fields/Family_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Family_Contact_Phone__c</fullName>
    <label>Family Contact Phone</label>
    <type>Phone</type>
</CustomField>