force-app/main/default/objects/Contact/fields/Family_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Family_Relationship__c</fullName>
    <label>Family Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Family_Member_Type_Picklist</valueSetName>
    </valueSet>
</CustomField>