force-app/main/default/objects/Contact/fields/FormulaManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>FormulaManagerEmail__c</fullName>
    <formula>IF(
  Owner.Profile.Name = &quot;System Administrator&quot;,
  &quot;UNASSIGNED&quot;,
  
  IF(
    Owner.Profile.Name = &quot;Manager&quot;,
    Owner.Email,
    Owner.Manager.Email
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulaManagerEmail</label>
    <type>Text</type>
</CustomField>