force-app/main/default/objects/Contact/fields/FormulaToday__c.field-meta.xml
<CustomField>
    <fullName>FormulaToday__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulaToday</label>
    <type>Date</type>
</CustomField>