force-app/main/default/objects/Contact/fields/FormulaUserIsOwnerManager__c.field-meta.xml
<CustomField>
    <fullName>FormulaUserIsOwnerManager__c</fullName>
    <formula>$User.Id = Owner.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulaUserIsOwnerManager</label>
    <type>Checkbox</type>
</CustomField>