force-app/main/default/objects/Contact/fields/Full_Time_Student__c.field-meta.xml
<CustomField>
    <fullName>Full_Time_Student__c</fullName>
    <label>Full Time Student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>