force-app/main/default/objects/Contact/fields/Geographic_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Preferences__c</fullName>
    <label>Geographic Preferences</label>
    <length>250</length>
    <type>Text</type>
</CustomField>