force-app/main/default/objects/Contact/fields/GW_Volunteers__First_Volunteer_Date__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__First_Volunteer_Date__c</fullName>
    <inlineHelpText>The first Volunteer Hours Start Date</inlineHelpText>
    <label>First Volunteer Date</label>
    <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Start_Date__c</summarizedField>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>