force-app/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Manager_Notes__c</fullName>
    <inlineHelpText>Notes about the volunteer that the volunteer manager or organization staff want to record.</inlineHelpText>
    <label>Volunteer Manager Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>