force-app/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Notes__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Notes__c</fullName>
    <inlineHelpText>Notes from the volunteer.  Note that the web signup form appends the volunteers comments to this field.</inlineHelpText>
    <label>Volunteer Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>