force-app/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Organization__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Organization__c</fullName>
    <inlineHelpText>The organization, company, or group the contact is volunteering on behalf of.</inlineHelpText>
    <label>Volunteer Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>