force-app/main/default/objects/Contact/fields/Has_CalFresh__c.field-meta.xml
<CustomField>
    <fullName>Has_CalFresh__c</fullName>
    <label>Has CalFresh</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>