force-app/main/default/objects/Contact/fields/Has_Calworks__c.field-meta.xml
<CustomField>
    <fullName>Has_Calworks__c</fullName>
    <label>Has Calworks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>