force-app/main/default/objects/Contact/fields/Has_Family_Contact__c.field-meta.xml
<CustomField>
    <fullName>Has_Family_Contact__c</fullName>
    <label>Has Family Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>