force-app/main/default/objects/Contact/fields/Has_Lease_Co_signer__c.field-meta.xml
<CustomField>
    <fullName>Has_Lease_Co_signer__c</fullName>
    <label>Has Lease Co-signer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>