force-app/main/default/objects/Contact/fields/Has_Section_8_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Has_Section_8_Voucher__c</fullName>
    <label>Has Section 8 Voucher</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>