force-app/main/default/objects/Contact/fields/Head_of_Household__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Household__c</fullName>
    <label>Head of Household</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>