force-app/main/default/objects/Contact/fields/HH_Income_Annual__c.field-meta.xml
<CustomField>
    <fullName>HH_Income_Annual__c</fullName>
    <formula>HH_Income_Monthly__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HH Income Annual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>