force-app/main/default/objects/Contact/fields/HH_Voucher_Income_Monthly__c.field-meta.xml
<CustomField>
    <fullName>HH_Voucher_Income_Monthly__c</fullName>
    <label>HH Voucher Income Monthly</label>
    <summarizedField>Income_Source__c.Monthly_Income__c</summarizedField>
    <summaryFilterItems>
        <field>Income_Source__c.Income_Type__c</field>
        <operation>equals</operation>
        <value>Voucher</value>
    </summaryFilterItems>
    <summaryForeignKey>Income_Source__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>