force-app/main/default/objects/Contact/fields/HMIS_Number__c.field-meta.xml
<CustomField>
    <fullName>HMIS_Number__c</fullName>
    <label>HMIS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>