force-app/main/default/objects/Contact/fields/Household_Size__c.field-meta.xml
<CustomField>
    <fullName>Household_Size__c</fullName>
    <formula>Housing_Member_Number__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>