force-app/main/default/objects/Contact/fields/Housing_Application__c.field-meta.xml
<CustomField>
    <fullName>Housing_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Housing Application</label>
    <type>Checkbox</type>
</CustomField>