force-app/main/default/objects/Contact/fields/Housing_Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Housing_Member_Number__c</fullName>
    <label>Housing Member Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>