force-app/main/default/objects/Contact/fields/Housing_Plan_Approval_Active__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan_Approval_Active__c</fullName>
    <formula>IF( 
  OR(
    Active_HC_Service_Case__c,
    Active_CMH_Service_Case__c 
  ),

  Current_Housing_Plan__r.Approval_Active__c,

  Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Plan Approval Active</label>
    <type>Checkbox</type>
</CustomField>