force-app/main/default/objects/Contact/fields/Housing_Plan_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan_Approval_Date__c</fullName>
    <label>Housing Plan Approval Date</label>
    <type>Date</type>
</CustomField>