force-app/main/default/objects/Contact/fields/Housing_Plan_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan_Approval_Status__c</fullName>
    <formula>IF( 
  Active_HC_Service_Case__c || Active_CMH_Service_Case__c,
  
  IF(
    ISBLANK( Current_Housing_Plan__c ),
    &quot;No Housing Plan&quot;,
    Current_Housing_Plan__r.Approval_Status__c

  ),
  Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Plan Approval Status</label>
    <type>Text</type>
</CustomField>