force-app/main/default/objects/Contact/fields/Housing_Plan_Approved__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Housing Plan Approved</label>
    <type>Checkbox</type>
</CustomField>