force-app/main/default/objects/Contact/fields/Housing_Plan_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan_Expiration_Date__c</fullName>
    <formula>ADDMONTHS( Current_Housing_Plan__r.Date_Approved__c , 12 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Plan Expiration Date</label>
    <type>Date</type>
</CustomField>