force-app/main/default/objects/Contact/fields/Housing_Plan_Expiration_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan_Expiration_Status__c</fullName>
    <formula>IF(
  AND(
    RecordType.Name = &quot;Client&quot;,
    TEXT(Status__c) != &quot;Closed&quot;,
    TEXT( Current_Housing_Plan__r.Status__c ) = &quot;Approved&quot;,

    OR(
      Active_HC_Service_Case__c = True,
      Active_CMH_Service_Case__c = True
    )
  ),

  Current_Housing_Plan__r.Expiration_Status__c,
  Null

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Plan Expiration Status</label>
    <type>Text</type>
</CustomField>