force-app/main/default/objects/Contact/fields/Housing_Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan_Summary__c</fullName>
    <label>Housing Plan Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>