force-app/main/default/objects/Contact/fields/Housing_Stability_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Stability_Status__c</fullName>
    <label>Housing Stability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Housing_Stability_Status_Picklist</valueSetName>
    </valueSet>
</CustomField>