force-app/main/default/objects/Contact/fields/Housing_Type__c.field-meta.xml
<CustomField>
    <fullName>Housing_Type__c</fullName>
    <label>Housing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Housing_Category_Picklist</valueSetName>
    </valueSet>
</CustomField>