force-app/main/default/objects/Contact/fields/HPS_Client__c.field-meta.xml
<CustomField>
    <fullName>HPS_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HPS Client</label>
    <type>Checkbox</type>
</CustomField>