force-app/main/default/objects/Contact/fields/HPS_Received_Aid_Within_72_Hours__c.field-meta.xml
<CustomField>
    <fullName>HPS_Received_Aid_Within_72_Hours__c</fullName>
    <label>HPS Received Aid Within 72 Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>