force-app/main/default/objects/Contact/fields/IsAutomationBypassed__c.field-meta.xml
<CustomField>
    <fullName>IsAutomationBypassed__c</fullName>
    <formula>AutomationBypassDateTime__c &gt; NOW() - 0.0011574074  /*One Minute*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsAutomationBypassed</label>
    <type>Checkbox</type>
</CustomField>