force-app/main/default/objects/Contact/fields/Last_Case_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Review_Date__c</fullName>
    <label>Last Case Review Date</label>
    <type>Date</type>
</CustomField>