force-app/main/default/objects/Contact/fields/Last_Quarterly_Report__c.field-meta.xml
<CustomField>
    <fullName>Last_Quarterly_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Quarterly Report</label>
    <referenceTo>Quarterly_Report__c</referenceTo>
    <relationshipLabel>Contacts (Last Quarterly Report)</relationshipLabel>
    <relationshipName>Contacts_Last_QR</relationshipName>
    <type>Lookup</type>
</CustomField>