force-app/main/default/objects/Contact/fields/Last_Quarterly_Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Quarterly_Report_Status__c</fullName>
    <formula>TEXT( Last_Quarterly_Report__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Quarterly Report Status</label>
    <type>Text</type>
</CustomField>