force-app/main/default/objects/Contact/fields/Lease_Co_signer__c.field-meta.xml
<CustomField>
    <fullName>Lease_Co_signer__c</fullName>
    <label>Lease Co-signer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conservator</fullName>
            </value>
            <value>
                <fullName>Family Contact</fullName>
            </value>
            <value>
                <fullName>Rep Payee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>