force-app/main/default/objects/Contact/fields/Limited_Mobility__c.field-meta.xml
<CustomField>
    <fullName>Limited_Mobility__c</fullName>
    <label>Limited Mobility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>