force-app/main/default/objects/Contact/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <formula>IF(
  Owner.PrimarySystemAdministrator__c = TRUE ||  Owner.Manager.PrimarySystemAdministrator__c = TRUE,
  &quot;UNASSIGNED&quot;,
  
  IF(
    Owner.Profile.Name = &quot;Manager&quot;,
    Owner.Full_Name__c,
    Owner.Manager.Full_Name__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Name</label>
    <type>Text</type>
</CustomField>