force-app/main/default/objects/Contact/fields/Minor_Adult__c.field-meta.xml
<CustomField>
    <fullName>Minor_Adult__c</fullName>
    <formula>IF( Age__c &gt;= 18, &quot;Adult&quot;, &quot;Minor&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minor/Adult</label>
    <type>Text</type>
</CustomField>