force-app/main/default/objects/Contact/fields/Missing_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Missing_Documentation__c</fullName>
    <label>Missing Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>