force-app/main/default/objects/Contact/fields/MissingRcRequiredField__c.field-meta.xml
<CustomField>
    <fullName>MissingRcRequiredField__c</fullName>
    <formula>OR
(
    ISBLANK(Birthdate),
    ISBLANK(Move_in_Date__c),
    ISBLANK(TEXT(Gender__c)),
    ISBLANK(TEXT(Race__c)),
    ISBLANK(TEXT(Partner_Property__c)),
    ISBLANK(TEXT(Language__c)),
    ISNULL(Accessibility_Needs__c),
    ISBLANK(Primary_Contact_Name__c),
    ISBLANK(Primary_Contact_Phone__c),
    ISBLANK(Emergency_Contact_Name__c),
    ISBLANK(Emergency_Contact_Phone__c),
    ISBLANK(Service_Coordinator_Name__c),
    ISBLANK(Service_Coordinator_Phone__c),
    ISBLANK(Service_Coordinator_Email__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MissingRcRequiredFieldBlank</label>
    <type>Checkbox</type>
</CustomField>