force-app/main/default/objects/Contact/fields/Move_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Move_in_Date__c</fullName>
    <label>Move-in Date</label>
    <type>Date</type>
</CustomField>