force-app/main/default/objects/Contact/fields/Net_Assets_Debt__c.field-meta.xml
<CustomField>
    <fullName>Net_Assets_Debt__c</fullName>
    <formula>Total_Assets__c - Total_Debt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Assets/Debt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>