force-app/main/default/objects/Contact/fields/npsp__Number_of_Soft_Credits_Last_N_Days__c.field-meta.xml
<CustomField>
    <fullName>npsp__Number_of_Soft_Credits_Last_N_Days__c</fullName>
    <description>The number of soft credits attributed to this Contact that closed in the last N days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</description>
    <inlineHelpText>The number of soft credits, closed in the last number of days defined in NPSP Settings.</inlineHelpText>
    <label>Number of Soft Credits Last N Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>