force-app/main/default/objects/Contact/fields/Number_Assets_Debts__c.field-meta.xml
<CustomField>
    <fullName>Number_Assets_Debts__c</fullName>
    <label>Number Assets/Debts</label>
    <summaryForeignKey>Asset_Debt__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>